2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/save.[ch]: removed.

	* gui/alarm-notify/Makefile.am: removed save.[ch].

	* gui/alarm-notify/notify-main.c: removed obsolete headers.

	* gui/alarm-notify/config-data.[ch]
	(config_data_set_last_notification_time,
	config_data_get_last_notification_time,
	config_data_save_blessed_program, config_data_is_blessed_program):
	new functions.

	* gui/alarm-notify/alarm-queue.c: dont use removed functions.
	(alarm_trigger_cb, procedure_notification_dialog,
	alarm_queue_init):
	use config_data_* functions.
	
	* gui/alarm-notify/alarm-notify.c: dont use removed functions.

2004-01-15  JP Rosevear <jpr@ximian.com>

	* gui/tasks-component.h: update protos
	
	* gui/tasks-component.c (impl_finalize): free base dir
	(impl_upgradeFromVersion): just call migrate_tasks
	(tasks_component_init): set base dir value
	(tasks_component_peek_base_directory): accessor
	(tasks_component_peek_source_list): ditto

	* gui/migration.c (process_old_dir): look for a source with the
	name and fallback to creating it
	(create_calendar_contact_source): create the contacts:// source
	(create_calendar_sources): use above and create all the necessary
	sources
	(create_task_sources): create all the necessary sources
	(migrate_calendars): do all the migration logic here, upgrade
	bonobo-conf to gconf
	(migrate_tasks): ditto

	* gui/calendar-component.h: update prototypes

	* gui/calendar-component.c (impl_finalize): free the base
	directory
	(impl_upgradeFromVersion): just call migrate_calendars
	(calendar_component_init): fill in base dir value
	(calendar_component_peek_base_directory): accessor
	(calendar_component_peek_source_list): ditto

2004-01-15  Radek Doulik  <rodo@ximian.com>

	* gui/calendar-component.c (create_new_event): test priv->calendar
	is not NULL before getting current view

	* gui/tasks-component.c (primary_source_selection_changed_cb):
	reset create_ecal
